fix(html_css): use wrap instead a grid

--- a/00_html_css/styles.css
+++ b/00_html_css/styles.css
@@ -60,7 +60,6 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: 2rem;
 
   h2 {
     font-size: 1.25rem;
@@ -71,6 +70,7 @@ header {
 
 .header-nav {
   display: flex;
+  flex-wrap: wrap;
   gap: 2em;
   padding: 10px 10px;
 }
@@ -105,7 +105,6 @@ header div div a {
   font-size: 0.875rem;
   font-weight: 700;
   text-decoration: none;
-  /* TODO */
 }
 
 header div div a:hover {
@@ -300,6 +299,10 @@ article {
     font-size: 1em;
   }
 
+  header {
+    padding: 0rem 1rem;
+  }
+
   nav {
     display: flex;
     width: 100%;
@@ -312,8 +315,7 @@ article {
 
   header div div {
     width: 100%;
-    display: grid;
-    grid-template-columns: 50% 50%;
+    display: flex;
     gap: 5%;
     padding: 0 5%;
     justify-items: center;
@@ -321,14 +323,13 @@ article {
 
   header div div a {
     width: 100%;
-    padding: 0.3rem 1rem;
+    padding: 0.5rem 0.3rem;
     text-align: center;
     align-content: center;
     font-size: 0.7em;
   }
 
   .header-nav {
-    flex-direction: column;
     gap: 0.5em;
     align-items: center;
     justify-content: center;
